# AIMentorProject

./: .dockerignore  .gitattributes  .gitignore  10232025_MilvusLiteMigrate.md  10252025-712PM_Gemini.md  10252025_4-49PM_progress.md  10252025_6-34PM_ClaudeSummary.md  10302025_Gemini_350PMAudit  AGENTIC_RAG_GUIDE.md  AI_MENTOR_SETUP_SUMMARY.md  ARCHITECTURE_DECISIONS.md  AUDIT_ACCURACY_EVALUATION.md  BUILD.bazel  CHROMADB_MIGRATION.md  CHROMADB_TEST_RESULTS.md  CLAUDE.md  CLAUDE_LOG.md  CLAUDE_PDFPLAN_1152025_209AM.md  CLAUDE_RESUME_10242025.md  COLLECTION_STATUS.md  CRITICAL_ANALYSIS.md  DEEP_ANALYSIS_ORIGINAL_PLAN.md  DEMO_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKER_HUB_SETUP.md  Dockerfile  FINAL_COLLECTION_SUMMARY.md  FRESH_DEPLOYMENT_SUMMARY.md  GEMINI_ANALYSIS_10242025.md  GITHUB_AUTH_SETUP.md  GITHUB_AUTH_STATUS.md  GITHUB_BACKUP_COMPLETE.md  GLM_11-14-2025.md  GOOGLE_DRIVE_INTEGRATION_ANALYSIS.md  Gemini_10302025.md  Gemini_10302025_AI_Mentor_Hardening_and_Evaluation_Plan.md  Gemini_1152025_321AM  Gemini_thoughts_1132025  Gemini_thoughts_1152025_923AM  (+57 more)
.github/workflows/: docker-build.yml
backend/: .env.example  SESSION_SUMMARY_10252025.md  ingest.py  main.py  monitor_gpu.sh  pytest.ini  rag_comparison_results.md  requirements.txt  source_verification.py  student_questions.json  test_agentic_rag.py  test_chromadb.py  test_embedding_gpu.py  test_full_rag.py  test_streaming.py  test_streaming_ws.py
backend/cs_materials_bulk/: bulk_metadata.json  curated_collection_summary.txt  curated_metadata.json  download_summary.txt
backend/evaluation/: EVALUATION_GUIDE.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENT_PLAN.md  METRICS.md  PROMPT_ENGINEERING_BEST_PRACTICES.md  QUALITATIVE_ANALYSIS.md  QUICK_COMPARISON.md  README.md  SCORING_QUICKSTART.md  SESSION_SUMMARY.md  analyze_results.py  compare_evaluations.py  import_scores.py  quality_checker.py  question_bank.json  question_bank_test.json  run_evaluation.py  test_interactive.py  test_single_eval.py
backend/scripts/: README_BULK_COLLECTION.md  additional_sources.py  bulk_harvester.py  cs_textbooks_catalog.json  curated_university_sources.json  expanded_academic_harvester.py  license_validator.py  multi_source_harvester.py  (+2 more)
frontend/: .env.example  COMPONENT_GUIDE.md  package-lock.json
(+54 files in other folders)
